Added templates and adding products to an order draft